adjusted video hide trigger to reflect layout breakpoint

--- a/_/css/style.css
+++ b/_/css/style.css
@@ -114,10 +114,15 @@ a:visited {
 
 @media screen and (max-width: 630px) {
   /* line 6, ../components/sass/_layout.scss */
+  #mobile_image {
+    background-image: url("../videos/tokyo_subway_900.png");
+    height: 100%; }
+
+  /* line 10, ../components/sass/_layout.scss */
   span.dash-bottom {
     height: 640px; }
 
-  /* line 9, ../components/sass/_layout.scss */
+  /* line 13, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 30px 65px 20px;
     margin-right: -10px;
@@ -125,123 +130,134 @@ a:visited {
     height: 515px;
     min-width: 320px; }
 
-  /* line 16, ../components/sass/_layout.scss */
+  /* line 20, ../components/sass/_layout.scss */
   #expo article {
     width: 300px; }
 
-  /* line 19, ../components/sass/_layout.scss */
+  /* line 23, ../components/sass/_layout.scss */
   #poem {
     height: 900px;
     min-width: 320px;
     background-image: url("../images/subway_630x900.jpg"); }
 
-  /* line 24, ../components/sass/_layout.scss */
+  /* line 28, ../components/sass/_layout.scss */
   #poem div {
     font-size: 60%;
     line-height: 130%; }
 
-  /* line 28, ../components/sass/_layout.scss */
+  /* line 32, ../components/sass/_layout.scss */
   footer {
     font-size: 0.95em;
     min-width: 400px; } }
 @media screen and (min-width: 631px) and (max-width: 647px) {
-  /* line 37, ../components/sass/_layout.scss */
+  /* line 41, ../components/sass/_layout.scss */
+  #mobile_image {
+    background-image: url("../videos/tokyo_subway_900.png");
+    height: 100%; }
+
+  /* line 45, ../components/sass/_layout.scss */
   span.dash-bottom {
     height: 640px; }
 
-  /* line 40, ../components/sass/_layout.scss */
+  /* line 48, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 10% 65px 10%;
     font-size: 1em;
     height: 335px; }
 
-  /* line 45, ../components/sass/_layout.scss */
+  /* line 53, ../components/sass/_layout.scss */
   #expo article {
     width: 650px; }
 
-  /* line 48, ../components/sass/_layout.scss */
+  /* line 56, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
-    background-image: url("../images/subway_645x680.jpg"); }
+    background-image: url("../images/subway_645x680.jpg");
+    height: 100%; }
 
-  /* line 52, ../components/sass/_layout.scss */
+  /* line 61, ../components/sass/_layout.scss */
   #poem div {
     font-size: 65%;
     line-height: 130%; } }
 @media screen and (min-width: 648px) and (max-width: 768px) {
-  /* line 61, ../components/sass/_layout.scss */
+  /* line 70, ../components/sass/_layout.scss */
+  #mobile_image {
+    background-image: url("../videos/tokyo_subway_900.png");
+    height: 100%; }
+
+  /* line 74, ../components/sass/_layout.scss */
   span.dash-bottom {
     height: 610px; }
 
-  /* line 64, ../components/sass/_layout.scss */
+  /* line 77, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 10% 65px 10%;
     height: 335px; }
 
-  /* line 68, ../components/sass/_layout.scss */
+  /* line 81, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_1280x680.jpg"); }
 
-  /* line 72, ../components/sass/_layout.scss */
+  /* line 85, ../components/sass/_layout.scss */
   #poem div {
     font-size: 65%;
     line-height: 130%; } }
 @media screen and (min-width: 769px) and (max-width: 970px) {
-  /* line 81, ../components/sass/_layout.scss */
+  /* line 94, ../components/sass/_layout.scss */
   span.dash-bottom {
     height: 610px; }
 
-  /* line 84, ../components/sass/_layout.scss */
+  /* line 97, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 10% 65px 10%;
     height: 335px; }
 
-  /* line 89, ../components/sass/_layout.scss */
+  /* line 102, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_970x680.jpg"); }
 
-  /* line 93, ../components/sass/_layout.scss */
+  /* line 106, ../components/sass/_layout.scss */
   #poem div {
     font-size: 80%; } }
 @media screen and (min-width: 971px) and (max-width: 1280px) {
-  /* line 102, ../components/sass/_layout.scss */
+  /* line 115, ../components/sass/_layout.scss */
   span.dash-bottom {
     height: 610px; }
 
-  /* line 105, ../components/sass/_layout.scss */
+  /* line 118, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 25% 65px 25%;
     height: 330px; }
 
-  /* line 109, ../components/sass/_layout.scss */
+  /* line 122, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_1280x680.jpg"); }
 
-  /* line 113, ../components/sass/_layout.scss */
+  /* line 126, ../components/sass/_layout.scss */
   #poem div {
     font-size: 100%; } }
 @media screen and (min-width: 1281px) {
-  /* line 122, ../components/sass/_layout.scss */
+  /* line 135, ../components/sass/_layout.scss */
   span.dash-bottom {
     height: 610px; }
 
-  /* line 125, ../components/sass/_layout.scss */
+  /* line 138, ../components/sass/_layout.scss */
   #expo {
     padding: 40px 25% 65px 25%;
     height: 295px; }
 
-  /* line 129, ../components/sass/_layout.scss */
+  /* line 142, ../components/sass/_layout.scss */
   #poem {
     height: 680px;
     background-image: url("../images/subway_1680x680.jpg"); }
 
-  /* line 133, ../components/sass/_layout.scss */
+  /* line 146, ../components/sass/_layout.scss */
   #poem div {
     font-size: 100%; } }
-/* line 139, ../components/sass/_layout.scss */
+/* line 152, ../components/sass/_layout.scss */
 header {
   background-color: rgba(0, 0, 0, 0.3);
   width: auto;
@@ -249,13 +265,13 @@ header {
   padding: 10px;
   color: #FFF; }
 
-/* line 151, ../components/sass/_layout.scss */
+/* line 164, ../components/sass/_layout.scss */
 #intro {
   text-align: center;
   width: 100%;
   height: 900px; }
 
-/* line 157, ../components/sass/_layout.scss */
+/* line 170, ../components/sass/_layout.scss */
 video {
   position: fixed;
   right: 0;
@@ -268,12 +284,7 @@ video {
   background: url("../videos/tokyo_subway.png") no-repeat;
   background-size: cover; }
 
-/* line 170, ../components/sass/_layout.scss */
-#mobile_image {
-  background-image: url("../videos/tokyo_subway_900.png");
-  height: 100%; }
-
-/* line 175, ../components/sass/_layout.scss */
+/* line 183, ../components/sass/_layout.scss */
 .overlay {
   width: 300px;
   height: 300px;
@@ -286,7 +297,7 @@ video {
   top: 20%;
   left: 33%; }
 
-/* line 188, ../components/sass/_layout.scss */
+/* line 196, ../components/sass/_layout.scss */
 .overlay p {
   text-align: center;
   width: 80%;
@@ -295,7 +306,7 @@ video {
   font-family: inherit;
   margin-bottom: 10px; }
 
-/* line 197, ../components/sass/_layout.scss */
+/* line 205, ../components/sass/_layout.scss */
 span.dash-bottom {
   width: 4px;
   border-right: 4px dashed #fdfdfe;
@@ -305,16 +316,16 @@ span.dash-bottom {
   left: 50%;
   margin-left: -2px; }
 
-/* line 207, ../components/sass/_layout.scss */
+/* line 215, ../components/sass/_layout.scss */
 #expo {
   line-height: 150%;
   background: #bdce64; }
 
-/* line 212, ../components/sass/_layout.scss */
+/* line 220, ../components/sass/_layout.scss */
 #expo p {
   padding-bottom: 1.25em; }
 
-/* line 216, ../components/sass/_layout.scss */
+/* line 224, ../components/sass/_layout.scss */
 .controls {
   background-color: #111177;
   width: auto;
@@ -322,11 +333,11 @@ span.dash-bottom {
   padding: 15px 0 0 0;
   color: #FFF; }
 
-/* line 224, ../components/sass/_layout.scss */
+/* line 232, ../components/sass/_layout.scss */
 #main {
   padding-left: 50px; }
 
-/* line 228, ../components/sass/_layout.scss */
+/* line 236, ../components/sass/_layout.scss */
 .hero #subway {
   width: 100%;
   background-repeat: no-repeat; }
