converted li elements to links and changed default behavior so buttons work in mobile with .click method.

--- a/_/components/sass/_layout.scss
+++ b/_/components/sass/_layout.scss
@@ -278,7 +278,6 @@ span.dash-bottom {
     padding-left: 50px;
 }
 
-.hero #subway {
-  width: 100%;
-  background-repeat: no-repeat;
+section#people, section#code {
+  display: none;
 }
