--- a/_/components/sass/_base.scss
+++ b/_/components/sass/_base.scss
@@ -50,12 +50,12 @@ a {
 		color: #FFF;
 	}
 	&:hover, &:active {
-		text-decoration:underline;
+		border-bottom: 1px dotted #FFF;
 	}
 	&:focus {
 		outline: none;
 	}
 	&:visited {
-		color: desaturate(#FFF, 20%);
+		color: #FFF;
 	}
 }
